--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,10 @@ nav {
   padding: 20px 30px;
 }
 
+.gray {
+  color: #918e9b;
+}
+
 .nav--logo {
   max-width: 500px;
 }
@@ -45,4 +49,24 @@ section {
   margin-top: 0;
 }
 
-/* Footer style */ ;
+/* Card style */
+
+.card {
+  width: 175px;
+  font-size: 12px;
+  margin-left: 37px;
+}
+
+.card--image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card--star {
+  height: 10px;
+}
+
+.card--stats {
+  display: flex;
+  align-items: center;
+}
