--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,13 +7,15 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/* Navbar style */
-
 nav {
-  height: 90px;
+  height: 70px;
   display: flex;
+  padding: 20px 36px;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-  padding: 20px 30px;
+}
+
+.bold {
+  font-weight: bold;
 }
 
 .gray {
@@ -21,10 +23,8 @@ nav {
 }
 
 .nav--logo {
-  max-width: 500px;
+  max-width: 100px;
 }
-
-/* Hero style */
 
 section {
   padding: 20px;
@@ -41,7 +41,6 @@ section {
 }
 
 .hero--header {
-  font-size: 36px;
   margin-bottom: 16px;
 }
 
@@ -49,24 +48,43 @@ section {
   margin-top: 0;
 }
 
-/* Card style */
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
 
 .card {
   width: 175px;
   font-size: 12px;
-  margin-left: 37px;
+  flex: 0 0 auto; /* ADD */
+  display: flex; /* ADD */
+  flex-direction: column; /* ADD */
 }
 
 .card--image {
   width: 100%;
   border-radius: 9px;
+  margin-bottom: 9px;
 }
 
-.card--star {
-  height: 10px;
+/* ADD */
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card--stats {
   display: flex;
   align-items: center;
+}
+
+.card--star {
+  height: 14px;
+}
+
+/* ADD */
+.card--price {
+  margin-top: auto;
 }
